feat: header navbar mobile design

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="grid min-h-screen">
     <header
-      class="col-auto grid grid-flow-col justify-between place-self-stretch"
+      class="col-auto grid grid-flow-col justify-between place-self-stretch px-4 pt-7 pb-[1.9rem]"
     >
       <nav class="order-2 hidden">
         <ul class="grid grid-flow-col gap-5">
@@ -29,15 +29,19 @@
           <li><a href="#">Categories</a></li>
         </ul>
       </nav>
-      <img class="order-1" src="./logo.svg" alt="logo" />
-      <img class="order-2" src="./icon-menu.svg" alt="menu" />
+      <img
+        class="order-1 w-[2.9rem] place-self-center"
+        src="./logo.svg"
+        alt="logo"
+      />
+      <img class="order-2 place-self-center" src="./icon-menu.svg" alt="menu" />
       <img
         class="order-2 hidden"
         src="./icon-menu-close.svg"
         alt="menu close"
       />
     </header>
-    <main class="grid bg-softOrange p-10 md:grid-cols-3 md:grid-rows-3">
+    <main class="grid bg-softOrange p-4 md:grid-cols-3 md:grid-rows-3">
       <section
         class="grid bg-softRed p-6 md:col-start-1 md:col-end-3 md:row-start-1 md:row-end-3 md:grid-cols-2 md:grid-rows-2"
       >
