feat: first main section

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="grid min-h-screen">
     <header
-      class="col-auto grid grid-flow-col justify-between place-self-stretch px-4 pt-7 pb-[1.9rem]"
+      class="col-auto grid grid-flow-col justify-between place-self-stretch px-[0.95rem] pt-7 pb-[1.9rem]"
     >
       <nav class="order-2 hidden">
         <ul class="grid grid-flow-col gap-5">
@@ -41,24 +41,28 @@
         alt="menu close"
       />
     </header>
-    <main class="grid bg-softOrange p-4 md:grid-cols-3 md:grid-rows-3">
+    <main class="grid px-[0.95rem] md:grid-cols-3 md:grid-rows-3">
       <section
-        class="grid bg-softRed p-6 md:col-start-1 md:col-end-3 md:row-start-1 md:row-end-3 md:grid-cols-2 md:grid-rows-2"
+        class="grid pb-[4rem] md:col-start-1 md:col-end-3 md:row-start-1 md:row-end-3 md:grid-cols-2 md:grid-rows-2"
       >
         <h1
-          class="order-2 md:col-start-1 md:col-end-2 md:row-start-2 md:row-end-3"
+          class="order-2 mt-[1.6rem] pr-2 text-[2.45rem] font-800 leading-[2.5rem] text-veryDarkBlue md:col-start-1 md:col-end-2 md:row-start-2 md:row-end-3"
         >
           The Bright Future of Web 3.0?
         </h1>
         <div
           class="order-3 md:col-start-2 md:col-end-3 md:row-start-2 md:row-end-3"
         >
-          <p>
+          <p class="mt-[1rem] leading-[1.63rem] text-darkGrayishBlue">
             We dive into the next evolution of the web that claims to put the
             power of the platforms back into the hands of the people. But is it
             really fulfilling its promise?
           </p>
-          <button>Read more</button>
+          <button
+            class="mt-[1.35rem] bg-softRed px-[2rem] pt-[0.9rem] pb-[0.75rem] text-[0.9rem] font-700 uppercase tracking-[0.255rem] text-white text-opacity-90"
+          >
+            Read more
+          </button>
         </div>
 
         <picture
