feat: full mobile design

--- a/public/index.html
+++ b/public/index.html
@@ -79,30 +79,36 @@
         </picture>
       </section>
       <nav
-        class="bg-darkGrayishBlue p-6 md:col-start-3 md:col-end-4 md:row-start-1 md:row-end-3"
+        class="mb-[3.95rem] bg-veryDarkBlue px-[1.3rem] pt-[1.1rem] md:col-start-3 md:col-end-4 md:row-start-1 md:row-end-3 [&>div]:mt-[1.75rem] [&>div]:border-b-[1px] [&>div]:border-b-grayishBlue [&>div]:border-opacity-70 [&>div>a]:text-[1.25rem] [&>div>a]:font-700 [&>div>a]:text-white [&>div>p]:mt-[1rem] [&>div>p]:pr-4 [&>div>p]:leading-[1.65rem] [&>div>p]:text-grayishBlue [&>div>p]:text-opacity-70"
       >
-        <h2>New</h2>
+        <h2
+          class="-mb-[0.3rem] text-[2rem] font-700 text-softOrange text-opacity-95"
+        >
+          New
+        </h2>
         <div>
           <a href="#">Hydrogen VS Electric Cars</a>
-          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+          <p class="mb-[1.1rem]">
+            Will hydrogen-fueled cars ever catch up to EVs?
+          </p>
         </div>
         <div>
           <a href="#">The Downsides of AI Artistry</a>
-          <p>
+          <p class="mb-[1.1rem]">
             What are the possible adverse effects of on-demand AI image
             generation?
           </p>
         </div>
-        <div>
+        <div class="border-none">
           <a href="#">Is VC Funding Drying Up?</a>
-          <p>
+          <p class="mb-[0.75rem]">
             Private funding by VC firms is down 50% YOY. We take a look at what
             that means.
           </p>
         </div>
       </nav>
       <nav
-        class="grid gap-4 p-6 md:col-start-1 md:col-end-4 md:row-start-3 md:row-end-4 md:grid-flow-col [&>div]:grid [&>div]:grid-cols-2 [&>div>div]:order-2 [&>div>div]:grid [&>div>img]:order-1 [&>div>div>p]:order-1 [&>div>div>h2]:order-2 [&>div>div>h3]:order-3"
+        class="mb-20 grid gap-[2rem] md:col-start-1 md:col-end-4 md:row-start-3 md:row-end-4 md:grid-flow-col [&>div]:grid [&>div]:grid-cols-[auto_auto] [&>div]:gap-[1.4rem] [&>div>div]:order-2 [&>div>div]:grid [&>div>div]:content-start [&>div>img]:order-1 [&>div>img]:h-[8.15rem] [&>div>img]:object-cover [&>div>div>p]:order-1 [&>div>div>p]:text-[2.1rem] [&>div>div>p]:font-800 [&>div>div>p]:leading-[2.1rem] [&>div>div>p]:text-grayishBlue [&>div>div>h2]:order-2 [&>div>div>h2]:mt-[0.7rem] [&>div>div>h3]:order-3 [&>div>div>h3]:mt-[0.4rem] [&>div>div>h3]:leading-[1.6rem] [&>div>div>h3]:text-darkGrayishBlue [&>div>div>h2>a]:text-[1.1rem] [&>div>div>h2>a]:font-700 [&>div>div>h2>a]:text-veryDarkBlue"
       >
         <div>
           <div>
