fix: mobile design

--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
   <body class="grid min-h-screen items-start">
     <main class="grid">
       <header
-        class="grid w-full grid-flow-col justify-between place-self-center px-[0.95rem] pt-7 pb-[1.9rem] md:max-w-[71.2rem] md:pb-[3.5rem] md:pt-[5.6rem]"
+        class="grid w-full grid-flow-col justify-between place-self-center px-[0.95rem] pt-7 pb-[1.9rem] sm:bg-red-600 lg:max-w-[71.2rem] lg:pb-[3.5rem] lg:pt-[5.6rem]"
       >
-        <nav class="order-2">
+        <nav class="order-2 hidden">
           <ul class="grid grid-flow-col gap-[2.4rem]">
             <li><a href="#">Home</a></li>
             <li><a href="#">New</a></li>
@@ -31,12 +31,12 @@
           </ul>
         </nav>
         <img
-          class="order-1 w-[2.9rem] place-self-center md:w-[4rem]"
+          class="order-1 w-[2.9rem] place-self-center lg:w-[4rem]"
           src="./logo.svg"
           alt="logo"
         />
         <img
-          class="order-2 hidden place-self-center"
+          class="order-2 place-self-center"
           src="./icon-menu.svg"
           alt="menu"
         />
@@ -47,18 +47,18 @@
         />
       </header>
       <section
-        class="grid place-self-center self-start px-[0.95rem] md:max-w-[71.2rem] md:grid-cols-[21.8rem_auto_21.9rem] md:grid-rows-[20rem_11.8rem_auto] md:gap-x-[1.9rem] [&>div]:grid [&>div]:grid-cols-[auto_auto] [&>div]:gap-[1.4rem] md:[&>div]:mt-[4.5rem] [&>div>div]:order-2 [&>div>div]:grid [&>div>div]:content-start [&>div>img]:order-1 [&>div>img]:h-[8.15rem] [&>div>img]:object-cover [&>div>div>p]:order-1 [&>div>div>p]:text-[2.1rem] [&>div>div>p]:font-800 [&>div>div>p]:leading-[2.1rem] [&>div>div>p]:text-grayishBlue [&>div>div>h2]:order-2 [&>div>div>h2]:mt-[0.7rem] [&>div>div>h3]:order-3 [&>div>div>h3]:mt-[0.4rem] [&>div>div>h3]:leading-[1.6rem] [&>div>div>h3]:text-darkGrayishBlue md:[&>div>div>h3]:text-[0.95rem] [&>div>div>h2>a]:text-[1.1rem] [&>div>div>h2>a]:font-700 [&>div>div>h2>a]:text-veryDarkBlue md:[&>div>div>h2>a]:text-[1.14rem]"
+        class="grid place-self-center self-start px-[0.95rem] lg:max-w-[71.2rem] lg:grid-cols-[21.8rem_auto_21.9rem] lg:grid-rows-[20rem_11.8rem_auto_auto] lg:gap-x-[1.9rem] [&>div]:grid [&>div]:grid-cols-[auto_auto] [&>div]:gap-[1.4rem] lg:[&>div]:mt-[4.5rem] [&>div>div]:order-2 [&>div>div]:grid [&>div>div]:content-start [&>div>img]:order-1 [&>div>img]:h-[8.15rem] [&>div>img]:object-cover [&>div>div>p]:order-1 [&>div>div>p]:text-[2.1rem] [&>div>div>p]:font-800 [&>div>div>p]:leading-[2.1rem] [&>div>div>p]:text-grayishBlue [&>div>div>h2]:order-2 [&>div>div>h2]:mt-[0.7rem] [&>div>div>h3]:order-3 [&>div>div>h3]:mt-[0.4rem] [&>div>div>h3]:leading-[1.6rem] [&>div>div>h3]:text-darkGrayishBlue lg:[&>div>div>h3]:text-[0.95rem] [&>div>div>h2>a]:text-[1.1rem] [&>div>div>h2>a]:font-700 [&>div>div>h2>a]:text-veryDarkBlue lg:[&>div>div>h2>a]:text-[1.14rem]"
       >
         <h1
-          class="order-2 mt-[1.6rem] pr-2 text-[2.45rem] font-800 leading-[2.5rem] text-veryDarkBlue md:col-start-1 md:col-end-2 md:row-start-2 md:row-end-3 md:mt-[1.65rem] md:text-[3.5rem] md:leading-[3.5rem]"
+          class="order-2 mt-[1.6rem] pr-2 text-[2.45rem] font-800 leading-[2.5rem] text-veryDarkBlue lg:col-start-1 lg:col-end-2 lg:row-start-2 lg:row-end-3 lg:mt-[1.65rem] lg:text-[3.5rem] lg:leading-[3.5rem]"
         >
           The Bright Future of Web 3.0?
         </h1>
         <section
-          class="order-3 md:col-start-2 md:col-end-3 md:row-start-2 md:row-end-3 md:grid md:h-full md:justify-between"
+          class="order-3 lg:col-start-2 lg:col-end-3 lg:row-start-2 lg:row-end-3 lg:grid lg:h-full lg:justify-between"
         >
           <p
-            class="mt-[1rem] leading-[1.63rem] text-darkGrayishBlue md:mt-[0.8rem] md:leading-[1.49rem]"
+            class="mt-[1rem] leading-[1.63rem] text-darkGrayishBlue lg:mt-[0.8rem] lg:leading-[1.49rem]"
           >
             We dive into the next evolution of the web that claims to put the
             power of the platforms back into the hands of the people. But is it
@@ -71,7 +71,7 @@
           </button>
         </section>
         <picture
-          class="order-1 md:col-start-1 md:col-end-3 md:row-start-1 md:row-end-2 md:max-h-[18.8rem]"
+          class="order-1 lg:col-start-1 lg:col-end-3 lg:row-start-1 lg:row-end-2 lg:max-h-[18.8rem]"
         >
           <source
             media="(min-width: 768px)"
@@ -84,22 +84,22 @@
           />
         </picture>
         <nav
-          class="mb-[3.95rem] bg-veryDarkBlue px-[1.3rem] pt-[1.1rem] md:col-start-3 md:col-end-4 md:row-start-1 md:row-end-3 md:mb-0 md:pl-[1.5rem] [&>div]:mt-[1.75rem] [&>div]:border-b-[1px] [&>div]:border-b-grayishBlue [&>div]:border-opacity-70 [&>div>a]:text-[1.25rem] [&>div>a]:font-700 [&>div>a]:text-white [&>div>p]:mt-[1rem] [&>div>p]:pr-4 [&>div>p]:leading-[1.65rem] [&>div>p]:text-grayishBlue [&>div>p]:text-opacity-70 md:[&>div>p]:mt-[0.3rem]"
+          class="order-4 bg-veryDarkBlue px-[1.3rem] pt-[1.1rem] lg:col-start-3 lg:col-end-4 lg:row-start-1 lg:row-end-3 lg:mb-0 lg:pl-[1.5rem] [&>div]:mt-[1.75rem] [&>div]:border-b-[1px] [&>div]:border-b-grayishBlue [&>div]:border-opacity-70 [&>div>a]:text-[1.25rem] [&>div>a]:font-700 [&>div>a]:text-white [&>div>p]:mt-[1rem] [&>div>p]:pr-4 [&>div>p]:leading-[1.65rem] [&>div>p]:text-grayishBlue [&>div>p]:text-opacity-70 lg:[&>div>p]:mt-[0.3rem]"
         >
           <h2
-            class="-mb-[0.3rem] text-[2rem] font-700 text-softOrange text-opacity-95 md:-mb-[0.8rem] md:text-[2.8rem]"
+            class="-mb-[0.3rem] text-[2rem] font-700 text-softOrange text-opacity-95 lg:-mb-[0.8rem] lg:text-[2.8rem]"
           >
             New
           </h2>
           <div>
             <a href="#">Hydrogen VS Electric Cars</a>
-            <p class="mb-[1.1rem] md:mb-[1.8rem]">
+            <p class="mb-[1.1rem] lg:mb-[1.8rem]">
               Will hydrogen-fueled cars ever catch up to EVs?
             </p>
           </div>
           <div>
             <a href="#">The Downsides of AI Artistry</a>
-            <p class="mb-[1.1rem] md:mb-[1.8rem]">
+            <p class="mb-[1.1rem] lg:mb-[1.8rem]">
               What are the possible adverse effects of on-demand AI image
               generation?
             </p>
@@ -112,7 +112,7 @@
             </p>
           </div>
         </nav>
-        <div>
+        <div class="order-5">
           <div>
             <h2>
               <a href="#">Reviving Retro PCs</a>
@@ -122,7 +122,7 @@
           </div>
           <img src="./image-retro-pcs.jpg" alt="retro pc" />
         </div>
-        <div>
+        <div class="order-6">
           <div>
             <h2>
               <a href="#">Top 10 Laptops of 2022</a>
@@ -132,7 +132,7 @@
           </div>
           <img src="./image-top-laptops.jpg" alt="top laptops" />
         </div>
-        <div>
+        <div class="order-7">
           <div>
             <h2>
               <a href="#">The Growth of Gaming</a>
