feat: fix mobile design gap

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
     <title>Frontend Mentor | News homepage</title>
   </head>
   <body class="grid min-h-screen items-start">
-    <main class="grid">
+    <main class="mb-32 grid">
       <header
-        class="grid w-full grid-flow-col justify-between place-self-center px-[0.95rem] pt-7 pb-[1.9rem] sm:bg-red-600 lg:max-w-[71.2rem] lg:pb-[3.5rem] lg:pt-[5.6rem]"
+        class="grid w-full grid-flow-col justify-between place-self-center px-[0.95rem] pt-7 pb-[1.9rem] sm:bg-red-600 lg:max-w-[71.2rem] lg:bg-white lg:pb-[3.5rem] lg:pt-[5.6rem]"
       >
         <nav class="order-2 hidden">
           <ul class="grid grid-flow-col gap-[2.4rem]">
@@ -47,7 +47,7 @@
         />
       </header>
       <section
-        class="grid place-self-center self-start px-[0.95rem] lg:max-w-[71.2rem] lg:grid-cols-[21.8rem_auto_21.9rem] lg:grid-rows-[20rem_11.8rem_auto_auto] lg:gap-x-[1.9rem] [&>div]:grid [&>div]:grid-cols-[auto_auto] [&>div]:gap-[1.4rem] lg:[&>div]:mt-[4.5rem] [&>div>div]:order-2 [&>div>div]:grid [&>div>div]:content-start [&>div>img]:order-1 [&>div>img]:h-[8.15rem] [&>div>img]:object-cover [&>div>div>p]:order-1 [&>div>div>p]:text-[2.1rem] [&>div>div>p]:font-800 [&>div>div>p]:leading-[2.1rem] [&>div>div>p]:text-grayishBlue [&>div>div>h2]:order-2 [&>div>div>h2]:mt-[0.7rem] [&>div>div>h3]:order-3 [&>div>div>h3]:mt-[0.4rem] [&>div>div>h3]:leading-[1.6rem] [&>div>div>h3]:text-darkGrayishBlue lg:[&>div>div>h3]:text-[0.95rem] [&>div>div>h2>a]:text-[1.1rem] [&>div>div>h2>a]:font-700 [&>div>div>h2>a]:text-veryDarkBlue lg:[&>div>div>h2>a]:text-[1.14rem]"
+        class="grid gap-16 place-self-center self-start px-[0.95rem] lg:max-w-[71.2rem] lg:grid-cols-[21.8rem_auto_21.9rem] lg:grid-rows-[20rem_11.8rem_auto_auto] lg:gap-x-[1.9rem] [&>div]:grid [&>div]:grid-cols-[auto_auto] [&>div]:gap-[1.4rem] lg:[&>div]:mt-[4.5rem] [&>div>div]:order-2 [&>div>div]:grid [&>div>div]:content-start [&>div>img]:order-1 [&>div>img]:h-[8.15rem] [&>div>img]:object-cover [&>div>div>p]:order-1 [&>div>div>p]:text-[2.1rem] [&>div>div>p]:font-800 [&>div>div>p]:leading-[2.1rem] [&>div>div>p]:text-grayishBlue [&>div>div>h2]:order-2 [&>div>div>h2]:mt-[0.7rem] [&>div>div>h3]:order-3 [&>div>div>h3]:mt-[0.4rem] [&>div>div>h3]:leading-[1.6rem] [&>div>div>h3]:text-darkGrayishBlue lg:[&>div>div>h3]:text-[0.95rem] [&>div>div>h2>a]:text-[1.1rem] [&>div>div>h2>a]:font-700 [&>div>div>h2>a]:text-veryDarkBlue lg:[&>div>div>h2>a]:text-[1.14rem]"
       >
         <h1
           class="order-2 mt-[1.6rem] pr-2 text-[2.45rem] font-800 leading-[2.5rem] text-veryDarkBlue lg:col-start-1 lg:col-end-2 lg:row-start-2 lg:row-end-3 lg:mt-[1.65rem] lg:text-[3.5rem] lg:leading-[3.5rem]"
@@ -122,7 +122,7 @@
           </div>
           <img src="./image-retro-pcs.jpg" alt="retro pc" />
         </div>
-        <div class="order-6">
+        <div class="order-6 -mt-8 lg:-mt-0">
           <div>
             <h2>
               <a href="#">Top 10 Laptops of 2022</a>
@@ -132,7 +132,7 @@
           </div>
           <img src="./image-top-laptops.jpg" alt="top laptops" />
         </div>
-        <div class="order-7">
+        <div class="order-7 -mt-8 lg:-mt-0">
           <div>
             <h2>
               <a href="#">The Growth of Gaming</a>
